# studyapp

./: .gitignore  Cargo.toml  PKGBUILD  music.json  rusic.gresource  study.css  study.desktop  study.gresource  study.gresource.xml  window.ui  window.ui~
src/: data.rs  file.rs  main.rs
