[package]
name = "study"
version = "1.0.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8.1"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
glib = "0.9.3"
serde_json = "1.0.51"
rand = "0.7.3"
gtk = "0.8.1"
